# rp6502-emu

./: .gitignore  .gitmodules  CLAUDE.md
docs/: demo.md
docs/plans/: 2026-02-21-emulator-design.md  2026-02-22-emulator-implementation.md  2026-02-22-framebuffer-redesign-plan.md  2026-02-22-framebuffer-redesign.md  2026-02-23-mode1-design.md  2026-02-23-mode1-plan.md  2026-02-23-review-backlog.md  2026-02-23-review-fixes.md  2026-02-23-screenshot-design.md  2026-02-23-screenshot-plan.md  2026-02-24-mode2-tile-design.md  2026-02-24-ria-api-helpers-design.md  2026-02-24-ria-api-helpers-plan.md
emu/: Cargo.toml
emu/scripts/: gen_font.py
emu/src/: bus.rs  main.rs  pix.rs  ria.rs  ria_api.rs  screenshot.rs  test_harness.rs
emu/src/vga/: font.rs  mod.rs  mode1.rs  mode2.rs  mode3.rs  palette.rs
